# SimpleImageEditor

./: CMakeLists.txt  README.md  hmirr.cpp  sobel.cpp  vmirr.cpp
